--- a/App/samples/viewComposition/getView/index.html
+++ b/App/samples/viewComposition/getView/index.html
@@ -1,7 +1,14 @@
 ﻿<div>
 
     <h1 class="alert alert-info">The Views Below Are Composed</h1>
+
+
     <select name="roles" data-bind="options: roles, value: role"></select>
     <!--ko compose: 'childView1.html'--><!--/ko-->
     <!--ko compose: 'childView2.html'--><!--/ko-->
+
+    <div class="alert alert-box">
+        <strong>module as JSON</strong><span  data-bind="text: moduleJSON"></span>
+    </div>
+
 </div>
